[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mactone"
version = "0.1.0"
description = "Play macOS system alert tones from Python"
authors = [
    { name = "Zackary Okun Dunivin" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0",
    "sounddevice>=0.4.0",
    "pydub>=0.25.1"
]

[tool.setuptools.packages.find]
where = ["."]